kube.yaml
# account-dist
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: account-dist
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      name: account-dist
  replicas: 2
  template:
    metadata:
      labels:
        name: account-dist
    spec:
      containers:
        - name: account-dist
          image: ${REGISTRY}/account-dist:${TAG}
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            successThreshold: 1

---

# Service
apiVersion: v1
kind: Service
metadata:
  # Unique key of the Service instance
  name: account-dist
  namespace: ${NAMESPACE}
spec:
  selector:
    name: account-dist
  ports:
    - name: http
      port: 8080

---

# gateway-dist
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: gateway-dist
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      name: gateway-dist
  replicas: 1
  template:
    metadata:
      labels:
        name: gateway-dist
    spec:
      containers:
        - name: gateway-dist
          image: ${REGISTRY}/gateway-dist:${TAG}
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            successThreshold: 1

---

# Service
apiVersion: v1
kind: Service
metadata:
  # Unique key of the Service instance
  name: gateway-dist
  namespace: ${NAMESPACE}
spec:
  selector:
    name: gateway-dist
  ports:
    - name: http
      port: 8080
