ing_test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  namespace: leonzhangxf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: account.leonzhangxf.com
    http:
      paths:
      - backend:
          serviceName: account-dist
          servicePort: 8080
